Fix header font size on mobile devices

--- a/public/assets/styles/responsive.css
+++ b/public/assets/styles/responsive.css
@@ -944,10 +944,11 @@
     padding-left: 0;
   }
   .agency2-hero .hero-content-wrapper .hero-content .hero-lead {
-    font-size: 3em;
+    font-size: 2.5em;
   }
   .agency2-hero .hero-content-wrapper .hero-content .hero-secondary {
     letter-spacing: 10px;
+    font-size: 0.8em;
   }
   .agency2-hero .hero-content-wrapper .hero-content .btn {
     margin-top: 25px;
